# GrayScottDiffusionProject

./: CMakeLists.txt  README.md  hello.cpp  input.txt  myprogram
include/: create_matrix.hpp  initial.hpp  matrix_vector.hpp  rhs.hpp  timestepping.hpp
src/: create_matrix.cpp  initial.cpp  main.cpp  matrix_vector.cpp  rhs.cpp  timestepping.cpp
tests/: test_initialisation.cpp
